# nishi-utils

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  NGRID_REPLAY_ANALYSIS.md  README.md  REPLICATION_DEADLOCK_BUG.md  RESILIENCE_RECOMMENDATIONS.md  pom.xml
.github/: dependabot.yml
doc/: CHANGELOG.md  go-live-checklist.md  nmap.md  nqueue-agent-guide.md  nqueue-examples.md  nqueue-readme.md
docs/: CHANGELOG.md  go-live-checklist.md  improvements-and-review-1.md
fixes/: improvements-and-review-1.md
ngrid-test/: Dockerfile  README.md  copy.sh  docker-entrypoint.sh  pom.xml
nishi-utils-core/: pom.xml
nishi-utils-oss/: README.md  pom.xml
planning/: 106-107-distributed-map-jdk21.md  113-backpressure-outbound-tcptransport.md  2026-06-08-relay-stream-definitive-5.0.0.md  2026-06-08-relay-stream-replication.md  2026-06-08-resend-log-retention.md  2026-06-23-ngrrd-idle-skip-checkpoint.md  cardinal-ha-coordination-failover-fix.md  cardinal-ha-oplog-hardening.md  checkpoint-nqueue-refactoring.md  checkpoint_issue78_epoch_truncation.md  checkpoint_jackson_serialization.md  cicd-tag-release.md  consumer-session-spec.md  (+59 more)
python/ngrrd-python/: README.md  pyproject.toml
python/ngrrd-python/examples/: ngrrd_dump.py
python/ngrrd-python/src/ngrrd_python/: __init__.py  cli.py  errors.py  models.py  reader.py
python/ngrrd-python/src/ngrrd_python/blob/: __init__.py  cli.py  migrate.py  spec.py  validate.py  verify.py  volume.py  walk.py
python/ngrrd-python/tests/: _ngrr_factory.py  test_blob_migrate.py  test_blob_routing.py  test_blob_spec.py  test_reader.py
(+701 files in other folders)
