[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngrrd-python"
version = "0.1.0"
authors = [
  { name="Nishisan Dev", email="support@nishisan.dev" },
]
description = "Python reader for the ngrrd time-series format"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
ngrrd-dump = "ngrrd_python.cli:main"
ngrrd-blob-migrate = "ngrrd_python.blob.cli:main"

[project.urls]
"Homepage" = "https://github.com/nishisan-dev/nishi-utils"
"Bug Tracker" = "https://github.com/nishisan-dev/nishi-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
